--- a/On The Map/Base.lproj/Main.storyboard
+++ b/On The Map/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12106.1" systemVersion="16E154a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16E154a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12074.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -57,9 +57,8 @@
                                     <constraint firstAttribute="height" constant="128" id="oYJ-1H-4Ib"/>
                                 </constraints>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MOI-6l-VNj">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MOI-6l-VNj">
                                 <rect key="frame" x="183" y="628" width="50" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="sign up">
                                     <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -75,6 +74,7 @@
                             <constraint firstItem="yV8-42-jAZ" firstAttribute="leading" secondItem="Bec-AB-PUF" secondAttribute="leading" id="8BN-eq-5vN"/>
                             <constraint firstItem="9Ul-fv-SZh" firstAttribute="trailing" secondItem="yV8-42-jAZ" secondAttribute="trailing" id="G2V-vZ-pG0"/>
                             <constraint firstItem="QXZ-WB-4AS" firstAttribute="leading" secondItem="Bec-AB-PUF" secondAttribute="leading" id="Ghu-DA-UP9"/>
+                            <constraint firstItem="MOI-6l-VNj" firstAttribute="top" secondItem="jlb-KN-d0e" secondAttribute="bottom" constant="8" symbolic="YES" id="PDW-CC-iTY"/>
                             <constraint firstItem="jlb-KN-d0e" firstAttribute="top" secondItem="9Ul-fv-SZh" secondAttribute="bottom" constant="15" id="Pne-tT-aM9"/>
                             <constraint firstItem="jlb-KN-d0e" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="QiP-4W-YS3"/>
                             <constraint firstItem="yV8-42-jAZ" firstAttribute="leading" secondItem="Bec-AB-PUF" secondAttribute="leading" id="Sxs-Q5-Rxv"/>
@@ -88,6 +88,7 @@
                             <constraint firstItem="9Ul-fv-SZh" firstAttribute="leading" secondItem="Bec-AB-PUF" secondAttribute="leading" id="sBJ-6w-oH1"/>
                             <constraint firstItem="QXZ-WB-4AS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sQj-cQ-CIG"/>
                             <constraint firstItem="QXZ-WB-4AS" firstAttribute="leading" secondItem="Bec-AB-PUF" secondAttribute="leading" id="y3S-8n-P4C"/>
+                            <constraint firstItem="MOI-6l-VNj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" constant="1" id="yV6-jh-yEC"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
@@ -145,10 +146,16 @@
                                     <action selector="reloadButtonClicked:" destination="Mz2-2n-HxH" id="Q9u-KA-8BC"/>
                                 </connections>
                             </barButtonItem>
+                            <barButtonItem systemItem="search" id="1Qs-8w-W9e">
+                                <connections>
+                                    <action selector="findMeButtonClicked:" destination="Mz2-2n-HxH" id="dxv-qL-pLF"/>
+                                </connections>
+                            </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="findMeButton" destination="1Qs-8w-W9e" id="IeH-CZ-rHn"/>
                         <outlet property="mapView" destination="jEX-ky-TnM" id="wMI-K7-Zb4"/>
                         <segue destination="BYZ-38-t0r" kind="presentation" identifier="logOutSegue" id="hdd-pd-3OT"/>
                     </connections>
@@ -345,18 +352,18 @@
                                 <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="pdW-nk-3Lq" id="7ni-Y9-HII">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Od2-wB-Khh">
-                                            <rect key="frame" x="70" y="11.999999999999998" width="33.333333333333336" height="20.333333333333332"/>
+                                            <rect key="frame" x="70" y="11" width="34" height="21"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hsm-a6-uhV">
-                                            <rect key="frame" x="340.33333333333331" y="11.999999999999998" width="58.666666666666664" height="20.333333333333332"/>
+                                            <rect key="frame" x="340" y="11" width="59" height="21"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
@@ -483,7 +490,6 @@
         <!--Table-->
         <scene sceneID="cbm-o8-8hL">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="IIq-zi-uOf" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController title="Table" automaticallyAdjustsScrollViewInsets="NO" id="tQD-x4-yNc" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Table View" image="list-1" id="csq-5Q-wLY"/>
                     <toolbarItems/>
@@ -496,6 +502,7 @@
                         <segue destination="WPS-i9-t2T" kind="relationship" relationship="rootViewController" id="xEN-Ee-ZCp"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IIq-zi-uOf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2853.6231884057975" y="641.57608695652175"/>
         </scene>
@@ -509,7 +516,7 @@
         <image name="udacity" width="256" height="256"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="XeN-c1-SDY"/>
-        <segue reference="KzH-dm-vvm"/>
+        <segue reference="hdd-pd-3OT"/>
+        <segue reference="kMW-Ha-c2S"/>
     </inferredMetricsTieBreakers>
 </document>
